[workspace]
resolver = "2"
members = ["crates/*"]

[profile.dev.package.insta]
opt-level = 3

[workspace.package]
version = "0.1.0"
categories = ["development-tools"]
homepage = "https://github.com/prefix-dev/rip"
repository = "https://github.com/prefix-dev/rip"
license = "BSD-3-Clause"
edition = "2021"
readme = "README.md"
rust-version = "1.70"

[workspace.metadata.release]
allow-branch = ["main"]
consolidate-commits = true
tag-prefix = ""

#[patch.crates-io]
#resolvo = { path="../resolvo" }
#resolvo = { git="https://github.com/mamba-org/resolvo.git", branch="main" }
