[package]
name = "index"
authors = ["Tim de Jager <tdejager89@gmail.com>"]
version.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
dirs = "5.0.1"
indexmap = "2.0.0"
indicatif = "0.17.6"
miette = { version = "5.10.0", features = ["fancy"] }
rand = "0.8.4"
rattler_installs_packages = { path = "../rattler_installs_packages" }
rip = { path = "../rip" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_json = "1.0.107"
tokio = { version = "1.29.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"


[package.metadata.release]
# Dont publish the binary
release = false
