[package]
name = "rattler_installs_packages"
version.workspace = true
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>", "Tim de Jager <tdejager89@gmail.com>"]
description = "Datastructures and algorithms to interact with Python packaging ecosystem"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
include = ["vendor/"]

[features]
default = ["native-tls"]
native-tls = ['reqwest/native-tls']
rustls-tls = ['reqwest/rustls-tls']

[dependencies]
async-trait = "0.1.73"
bytes = "1.5.0"
ciborium = "0.2.1"
data-encoding = "2.4.0"
elsa = "1.9.0"
fs4 = "0.6.6"
futures = "0.3.28"
html-escape = "0.2.13"
http = "0.2.9"
http-cache-semantics = { version = "1.0.1", default-features = false, features = ["with_serde", "reqwest"] }
include_dir = "0.7.3"
indexmap = "2.0.1"
itertools = "0.11.0"
miette = "5.10.0"
mime = "0.3.17"
once_cell = "1.18.0"
parking_lot = "0.12.1"
peg = "0.8.1"
pep440_rs = { version = "0.3.12", features = ["serde"] }
pep508_rs = { version = "0.2.3", features = ["serde"] }
pin-project-lite = "0.2.13"
rattler_digest = { version = "0.9.0", features = ["serde"] }
regex = "1.9.5"
reqwest = { version = "0.11.20", default-features = false, features = ["json", "stream"] }
serde = "1.0.188"
serde_json = "1.0.107"
serde_with = "3.3.0"
smallvec = { version = "1.11.1", features = ["const_generics", "const_new"] }
tempfile = "3.8.0"
thiserror = "1.0.49"
tl = "0.7.7"
tokio = { version = "1.32.0", features = ["process"] }
tokio-util = { version = "0.7.9", features = ["compat"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
url = { version = "2.4.1", features = ["serde"] }
zip = "0.6.6"
resolvo = { version = "0.1.0", optional = true }

[dev-dependencies]
criterion = "0.5"
insta = { version = "1.33.0", features = ["ron"] }
miette = { version = "5.10.0", features = ["fancy"] }
once_cell = "1.18.0"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-test = "0.4.3"

[[bench]]
name = "html"
harness = false
