[package]
name = "rip"
version.workspace = true
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "Binary to verify and play around with rattler_installs_packages"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
default-run = "rip"

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
console = { version = "0.15.7", features = ["windows-console-colors"] }
dirs = "5.0.1"
indexmap = "2.0.0"
indicatif = "0.17.7"
itertools = "0.11.0"
miette = { version = "5.10.0", features = ["fancy"] }
rand = "0.8.5"
rattler_installs_packages = { path = "../rattler_installs_packages" }
reqwest = "0.11.20"
resolvo = "0.1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.188"
serde_json = "1.0.107"
serde_with = "3.3.0"
tabwriter = { version = "1.3.0", features = ["ansi_formatting"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"

[package.metadata.release]
# Dont publish the binary
release = false
