[package]
name = "rip"
version.workspace = true
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>", "Tim de Jager <tdejager89@gmail.com>"]
description = "Implementation of resolvo for use with rattler_installs_packages"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
dirs = "5.0.1"
indexmap = "2.0.0"
itertools = "0.11.0"
miette = { version = "5.10.0", features = ["fancy"] }
rattler_installs_packages = { path = "../rattler_installs_packages" }
resolvo = "0.1.0"
reqwest = "0.11.19"
tokio = { version = "1.29.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
url = "2.4.0"
rand = "0.8.4"
serde = "1.0.188"
serde_with = "3.0.0"
serde_json = "1.0.107"

[package.metadata.release]
# Dont publish the binary
release = false
