[package]
name = "rip_bin"
version.workspace = true
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>", "Tim de Jager <tdejager89@gmail.com>"]
description = "Binary to verify and play around with rattler_installs_packages"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
default-run = "rip"

[[bin]]
name = "rip"
path = "src/main.rs"

[features]
default = ["native-tls"]
native-tls = ['rattler_installs_packages/native-tls']
rustls-tls = ['rattler_installs_packages/rustls-tls']

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = { version = "0.15.8", features = ["windows-console-colors"] }
dirs = "5.0.1"
indexmap = "2.2.6"
indicatif = "0.17.8"
itertools = "0.12.1"
miette = { version = "7.2.0", features = ["fancy"] }
rattler_installs_packages = { path = "../rattler_installs_packages", default-features = false }
reqwest = { version = "0.12.3", default-features = false }
reqwest-middleware = "0.3.0"
tabwriter = { version = "1.4.0", features = ["ansi_formatting"] }
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
rand = "0.8.5"
serde = "1.0.198"
serde_json = "1.0.116"
fs-err = "2.11.0"
clap-verbosity-flag = "2.2.0"

[package.metadata.release]
release = false
