[package]
name = "test-utils"
version.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
url = "2.5.0"
thiserror = "1.0.56"
rattler_digest = "0.17.0"
reqwest = { version = "0.11.24", default-features = false, features = ["blocking", "rustls"] }
tempfile = "3.10.0"
dirs = "5.0.1"
fslock = "0.2.1"
data-encoding = "2.5.0"
tokio = "1.36.0"

[package.metadata.release]
release = false
