[package]
name = "test-utils"
version.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
url = "2.5.0"
thiserror = "1.0.58"
rattler_digest = "0.19.3"
reqwest = { version = "0.12.3", default-features = false, features = ["blocking", "rustls-tls"] }
tempfile = "3.10.1"
dirs = "5.0.1"
fslock = "0.2.1"
data-encoding = "2.5.0"
tokio = "1.37.0"

[package.metadata.release]
release = false
